[package]
name = "blisp-repl"
version = "0.3.5"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"

[dependencies.blisp]
version = "0.3.5"

[dependencies.num-bigint]
version = "0.3.1"
default-features = false