[package]
name = "blisp-repl"
version = "0.3.6"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"

[dependencies.blisp]
version = "0.3.6"

[dependencies.num-bigint]
version = "0.4.0"
default-features = false