[package]
name = "blisp-repl"
version = "0.3.8"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2018"
description = "REPL of BLisp, a lisp like statically typed programing language for no_std."
repository = "https://github.com/ytakano/blisp"
keywords = [ "scripting", "scripting-language" ]
categories = [ "command-line-utilities" ]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://ytakano.github.io/blisp/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"

[dependencies.blisp]
version = "0.3.9"

[dependencies.num-bigint]
version = "0.4.0"
default-features = false